[tool.poetry]
name = "naked"
version = "0.1.0"
description = "Strip a model and only keep what matters for predicting."
authors = ["MaxHalford <maxhalford25@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^0.24.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
streamlit = "^0.78.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
